library/general/haslimits/samples/has-limits/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHasLimits
metadata:
  name: container-must-have-any-limits-set
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
